--- a/index.html
+++ b/index.html
@@ -323,19 +323,21 @@ spray enamel, synthetic polymer and silkscreen inks on canvas.</p>
 						</ul>
 					</div>
 					<div class="col-md-6 to-animate-2">
+						
 					
 <h3>Questions and suggestions</h3>
-<form id="myform" method="post"></form>
+						<form id="myform" method="post">
 <label>From</label>
-<input type="text" name="from_name"/>
+<input type="text" name="from_name" />
 </div>
-<BR>
+<BR><BR>
 <label>Message</label>
-<input type="text" name="message_html"/>
+<input type="text" name="message_html" />
 <br><br>
 <button>
 Send
 </button>
+</form>
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
